--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -68,7 +68,9 @@ jobs:
       run: npm run build
       
     - name: Setup Pages
+      id: pages
       uses: actions/configure-pages@v4
+      continue-on-error: true
 
     - name: Upload artifact
       uses: actions/upload-pages-artifact@v3
