--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -67,6 +67,9 @@ jobs:
     - name: Build project
       run: npm run build
       
+    - name: Debug dist folder contents
+      run: ls -la ./dist
+    
     - name: Setup Pages
       id: pages
       uses: actions/configure-pages@v4
