--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -60,12 +60,15 @@ jobs:
         
     - name: Install dependencies
       run: npm ci
-      
+
+    - name: Build
+      run: npm run build
+
+    - name: Install Vercel CLI
+      run: npm install --global vercel@latest
+
     - name: Deploy to Vercel
-      uses: amondnet/vercel-action@v25
-      with:
-        vercel-token: ${{ secrets.VERCEL_TOKEN }}
-        vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
-        vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }}
-        working-directory: ./
-        vercel-args: '--prod'
+      env:
+        VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
+      run: |
+        vercel deploy ./dist --token ${VERCEL_TOKEN} --prod --yes
