fix: update Vercel deployment command in CI/CD workflow

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -71,4 +71,4 @@ jobs:
       env:
         VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
       run: |
-        vercel deploy ./dist --token ${VERCEL_TOKEN} --prod --yes
+        vercel ./dist --token ${VERCEL_TOKEN} --prod --yes
