--- a/vercel.json
+++ b/vercel.json
@@ -12,6 +12,15 @@
   ],
   "routes": [
     {
+      "src": "^/assets/(.*)",
+      "headers": { "cache-control": "public, max-age=31536000, immutable" },
+      "continue": true
+    },
+    {
+      "src": "^/(favicon.ico|robots.txt|sitemap.xml)",
+      "dest": "/$1"
+    },
+    {
       "src": "/(.*)",
       "has": [
         {
@@ -21,28 +30,18 @@
       ],
       "status": 301,
       "headers": {
-        "Location": "https://zonely.space/$1"
+        "Location": "https://zonely.space/$1",
+        "Cache-Control": "s-maxage=3600"
       }
     },
     {
-      "src": "^/assets/(.*)",
-      "headers": { "cache-control": "public, max-age=31536000, immutable" }
-    },
-    {
-      "src": "^/favicon.ico",
-      "dest": "/favicon.ico"
-    },
-    {
-      "src": "^/robots.txt",
-      "dest": "/robots.txt"
-    },
-    {
-      "src": "^/sitemap.xml",
-      "dest": "/sitemap.xml"
+      "handle": "filesystem"
     },
     {
       "src": "/(.*)",
-      "status": 200,
+      "headers": {
+        "Cache-Control": "public, max-age=0, must-revalidate"
+      },
       "dest": "/index.html"
     }
   ]
