--- a/vercel.json
+++ b/vercel.json
@@ -12,28 +12,30 @@
   ],
   "routes": [
     {
-      "source": "/:path*",
+      "src": "/assets/(.*)",
+      "headers": {
+        "cache-control": "public, max-age=31536000, immutable"
+      }
+    },
+    {
+      "src": "/(.*)",
       "has": [
         {
           "type": "host",
           "value": "www.zonely.space"
         }
       ],
-      "permanent": true,
-      "destination": "https://zonely.space/:path*"
-    },
-    {
-      "source": "/assets/:path*",
+      "status": 301,
       "headers": {
-        "cache-control": "public, max-age=31536000, immutable"
+        "Location": "https://zonely.space/$1"
       }
     },
     {
-      "source": "/(.*)",
+      "src": "/(.*)",
+      "dest": "/index.html",
       "headers": {
         "cache-control": "s-maxage=1, stale-while-revalidate"
-      },
-      "destination": "/index.html"
+      }
     }
   ]
 } 
