--- a/vercel.json
+++ b/vercel.json
@@ -12,29 +12,20 @@
   ],
   "routes": [
     {
-      "src": "/assets/(.*)",
-      "headers": {
-        "cache-control": "public, max-age=31536000, immutable"
-      }
+      "handle": "filesystem"
     },
     {
-      "src": "/(.*)",
-      "has": [
-        {
-          "type": "host",
-          "value": "www.zonely.space"
-        }
-      ],
-      "status": 301,
+      "src": "^/assets/(.*)",
       "headers": {
-        "Location": "https://zonely.space/$1"
-      }
+        "cache-control": "public, max-age=31536000, immutable"
+      },
+      "continue": true
     },
     {
       "src": "/(.*)",
       "dest": "/index.html",
       "headers": {
-        "cache-control": "s-maxage=1, stale-while-revalidate"
+        "cache-control": "public, max-age=0, must-revalidate"
       }
     }
   ]
