--- a/vercel.json
+++ b/vercel.json
@@ -12,9 +12,6 @@
   ],
   "routes": [
     {
-      "handle": "filesystem"
-    },
-    {
       "src": "^/assets/(.*)",
       "headers": {
         "cache-control": "public, max-age=31536000, immutable"
@@ -22,11 +19,34 @@
       "continue": true
     },
     {
+      "src": "/sitemap.xml",
+      "headers": {
+        "content-type": "application/xml",
+        "cache-control": "public, max-age=3600"
+      },
+      "dest": "/sitemap.xml"
+    },
+    {
+      "src": "/robots.txt",
+      "headers": {
+        "content-type": "text/plain",
+        "cache-control": "public, max-age=3600"
+      },
+      "dest": "/robots.txt"
+    },
+    {
+      "handle": "filesystem"
+    },
+    {
       "src": "/(.*)",
       "dest": "/index.html",
       "headers": {
-        "cache-control": "public, max-age=0, must-revalidate"
-      }
+        "cache-control": "public, max-age=0, must-revalidate",
+        "x-frame-options": "DENY",
+        "x-content-type-options": "nosniff",
+        "x-xss-protection": "1; mode=block"
+      },
+      "status": 200
     }
   ]
 } 
